# orca-lift

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  QUICKSTART.md  README.md  README_REST_API.md  TASK_SUMMARY.md  compose.yaml  pyproject.toml
.claude/: settings.local.json
backend/: .dockerignore  API_EXAMPLES.md  Dockerfile  FILES_CREATED.md  REST_API_SUMMARY.md  docker-entrypoint.sh  pyproject.toml
backend/integration_tests/: test_pipeline.py
backend/src/orca_lift/: __init__.py  cli.py
backend/src/orca_lift/agents/: __init__.py  congregation.py  executor.py  liftoscript_converter.py  liftoscript_spec.py  output_specs.py  plan_builder.py  prompts.py  tools.py
backend/src/orca_lift/clients/: base.py
backend/src/orca_lift/clients/google_fit/: parsers.py
backend/src/orca_lift/clients/health_connect/: __init__.py  client.py  parsers.py
backend/src/orca_lift/clients/manual/: __init__.py  client.py
backend/src/orca_lift/commands/: base.py  export.py  generate.py  import_data.py  init.py  programs.py  refine.py  revise_cmd.py  serve.py
backend/src/orca_lift/data/: exercise_loader.py
backend/src/orca_lift/db/: engine.py  repositories.py
backend/src/orca_lift/formats/: base.py  liftoscript.py  orcafit.py
backend/src/orca_lift/generators/: liftoscript.py
backend/src/orca_lift/models/: __init__.py  program.py  user_profile.py
backend/src/orca_lift/services/: refine.py  revision.py
backend/src/orca_lift/utils/: exercise_utils.py
backend/src/orca_lift/validators/: constraint_validator.py
backend/src/orca_lift/web/: __init__.py  app.py  deps.py
backend/src/orca_lift/web/routers/: api_auth.py  api_exercises.py  api_programs.py  api_workouts.py  equipment.py  profile.py  programs.py  users.py
backend/src/orca_lift/web/templates/: base.html  equipment.html  profile.html  progress.html  users.html
backend/src/orca_lift/web/templates/programs/: _structure.html  list.html  new.html  view.html
backend/tests/: test_liftoscript.py  test_models.py  test_utils.py
(+115 files in other folders)
